[package]
name = "talc-wasm"
version = "0.1.0"
authors = ["Shaun Beautement <sf.beautement@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.64", features = ["Window"] }
js-sys = "0.3.64"
fastrand = "2.0.0"
easybench-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"

lol_alloc = { version = "0.4.0", optional = true }

[dependencies.talc]
path = "../talc"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# be realistic about the optimization configuration
[profile.release]
opt-level = "s"
